[gd_scene load_steps=5 format=2]

[ext_resource path="res://Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerBoard.gd" type="Script" id=2]
[ext_resource path="res://PlayerHand.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerMana.tscn" type="PackedScene" id=4]

[node name="PlayerBoard" type="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHand" parent="." instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 766.0
margin_bottom = 600.0

[node name="PlayerMana" parent="." instance=ExtResource( 4 )]
margin_left = 770.0
margin_top = 280.0
margin_right = 878.0
margin_bottom = 319.0

[node name="Deck" parent="." instance=ExtResource( 1 )]
margin_left = 882.0
margin_right = 1032.0
margin_bottom = 600.0

[connection signal="new_card" from="Deck" to="." method="_on_Deck_new_card"]
